--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,32 @@
 #
 .DS_Store
 
-# node.js
-#
-node_modules/
+*.iml
+*.patch
+.classpath
+.DS_Store
+.idea
+.metadata
+.project
+.settings
+RemoteSystemsTempFiles
+
+**/.classpath
+**/.project
+**/.settings
+**/bin
+**/target
+**/C:
+**/.checkstyle
+
+**/hs*.log
+**/replay*.log
+
+# Ansible
+.galaxy
+
+# Front end
+**/node_modules
+**/node
+bundle.js
 npm-debug.log
